--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h3 id="foodCount">Score: 0</h3>
       <button class="button" id="pause">Pause</button>
     </div>
-    <canvas id="snakeGame" width="550" height="550"></canvas>
+    <canvas id="snakeGame"></canvas>
     <div class="controls">
       <button class="button none" id="left">Left</button>
       <div class="side">
